v1.1.0/modules/schema/pages/class/GovHydroWEH.adoc
= `GovHydroWEH`
:toclevels: 4


+++Woodward<sup>TM </sup>electric hydro governor. 
[Footnote: Woodward electric hydro governors are an example of suitable products available commercially. This information is given for the convenience of users of this document and does not constitute an endorsement by IEC of these products.]+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovHydroWEH`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovHydroWEH`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<db,`db`>>
//| [[slots_table.db]]<<db,`db`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Speed deadband (<i>db</i>).+++
| _n/a_

| <<dicn,`dicn`>>
//| [[slots_table.dicn]]<<dicn,`dicn`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Value to allow the integral controller to advance beyond the gate limits (<i>Dicn</i>).+++
| _n/a_

| <<dpv,`dpv`>>
//| [[slots_table.dpv]]<<dpv,`dpv`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Value to allow the pilot valve controller to advance beyond the gate limits (<i>Dpv</i>).+++
| _n/a_

| <<dturb,`dturb`>>
//| [[slots_table.dturb]]<<dturb,`dturb`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine damping factor (<i>Dturb</i>).  Unit = delta P (PU of <i>MWbase</i>) / delta speed (PU).+++
| _n/a_

| <<feedbackSignal,`feedbackSignal`>>
//| [[slots_table.feedbackSignal]]<<feedbackSignal,`feedbackSignal`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Feedback signal selection (<i>Sw</i>).
true = PID output (if <i>R-Perm-Gate </i>= droop and <i>R-Perm-Pe </i>= 0)
false =...+++
| _n/a_

| <<fl1,`fl1`>>
//| [[slots_table.fl1]]<<fl1,`fl1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flowgate 1 (<i>Fl1</i>).  Flow value for gate position point 1 for lookup table representing water flow through the turbine...+++
| _n/a_

| <<fl2,`fl2`>>
//| [[slots_table.fl2]]<<fl2,`fl2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flowgate 2 (<i>Fl2</i>).  Flow value for gate position point 2 for lookup table representing water flow through the turbine...+++
| _n/a_

| <<fl3,`fl3`>>
//| [[slots_table.fl3]]<<fl3,`fl3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flowgate 3 (<i>Fl3</i>).  Flow value for gate position point 3 for lookup table representing water flow through the turbine...+++
| _n/a_

| <<fl4,`fl4`>>
//| [[slots_table.fl4]]<<fl4,`fl4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flowgate 4 (<i>Fl4</i>).  Flow value for gate position point 4 for lookup table representing water flow through the turbine...+++
| _n/a_

| <<fl5,`fl5`>>
//| [[slots_table.fl5]]<<fl5,`fl5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flowgate 5 (<i>Fl5</i>).  Flow value for gate position point 5 for lookup table representing water flow through the turbine...+++
| _n/a_

| <<fp1,`fp1`>>
//| [[slots_table.fp1]]<<fp1,`fp1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P1 (<i>Fp1</i>).  Turbine flow value for point 1 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp10,`fp10`>>
//| [[slots_table.fp10]]<<fp10,`fp10`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P10 (<i>Fp10</i>).  Turbine flow value for point 10 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp2,`fp2`>>
//| [[slots_table.fp2]]<<fp2,`fp2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P2 (<i>Fp2</i>).  Turbine flow value for point 2 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp3,`fp3`>>
//| [[slots_table.fp3]]<<fp3,`fp3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P3 (<i>Fp3</i>).  Turbine flow value for point 3 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp4,`fp4`>>
//| [[slots_table.fp4]]<<fp4,`fp4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P4 (<i>Fp4</i>).  Turbine flow value for point 4 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp5,`fp5`>>
//| [[slots_table.fp5]]<<fp5,`fp5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P5 (<i>Fp5</i>).  Turbine flow value for point 5 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp6,`fp6`>>
//| [[slots_table.fp6]]<<fp6,`fp6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P6 (<i>Fp6</i>).  Turbine flow value for point 6 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp7,`fp7`>>
//| [[slots_table.fp7]]<<fp7,`fp7`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P7 (<i>Fp7</i>).  Turbine flow value for point 7 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp8,`fp8`>>
//| [[slots_table.fp8]]<<fp8,`fp8`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P8 (<i>Fp8</i>).  Turbine flow value for point 8 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<fp9,`fp9`>>
//| [[slots_table.fp9]]<<fp9,`fp9`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Flow P9 (<i>Fp9</i>).  Turbine flow value for point 9 for lookup table representing PU mechanical power on machine MVA...+++
| _n/a_

| <<gmax,`gmax`>>
//| [[slots_table.gmax]]<<gmax,`gmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum gate position (<i>Gmax</i>) (&gt; GovHydroWEH.gmin).+++
| _n/a_

| <<gmin,`gmin`>>
//| [[slots_table.gmin]]<<gmin,`gmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum gate position (<i>Gmin</i>) (&lt; GovHydroWEH.gmax).+++
| _n/a_

| <<gtmxcl,`gtmxcl`>>
//| [[slots_table.gtmxcl]]<<gtmxcl,`gtmxcl`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum gate closing rate (<i>Gtmxcl</i>).+++
| _n/a_

| <<gtmxop,`gtmxop`>>
//| [[slots_table.gtmxop]]<<gtmxop,`gtmxop`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum gate opening rate (<i>Gtmxop</i>).+++
| _n/a_

| <<gv1,`gv1`>>
//| [[slots_table.gv1]]<<gv1,`gv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gate 1 (<i>Gv1</i>).  Gate Position value for point 1 for lookup table representing water flow through the turbine as a...+++
| _n/a_

| <<gv2,`gv2`>>
//| [[slots_table.gv2]]<<gv2,`gv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gate 2 (<i>Gv2</i>).  Gate Position value for point 2 for lookup table representing water flow through the turbine as a...+++
| _n/a_

| <<gv3,`gv3`>>
//| [[slots_table.gv3]]<<gv3,`gv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gate 3 (<i>Gv3</i>).  Gate Position value for point 3 for lookup table representing water flow through the turbine as a...+++
| _n/a_

| <<gv4,`gv4`>>
//| [[slots_table.gv4]]<<gv4,`gv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gate 4 (<i>Gv4</i>).  Gate Position value for point 4 for lookup table representing water flow through the turbine as a...+++
| _n/a_

| <<gv5,`gv5`>>
//| [[slots_table.gv5]]<<gv5,`gv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gate 5 (<i>Gv5</i>).  Gate Position value for point 5 for lookup table representing water flow through the turbine as a...+++
| _n/a_

| <<kd,`kd`>>
//| [[slots_table.kd]]<<kd,`kd`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Derivative controller derivative gain (<i>Kd</i>).+++
| _n/a_

| <<ki,`ki`>>
//| [[slots_table.ki]]<<ki,`ki`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Derivative controller Integral gain (<i>Ki</i>).+++
| _n/a_

| <<kp,`kp`>>
//| [[slots_table.kp]]<<kp,`kp`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Derivative control gain (<i>Kp</i>).+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pmss1,`pmss1`>>
//| [[slots_table.pmss1]]<<pmss1,`pmss1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P1 (<i>Pmss1</i>).  Mechanical power output for turbine flow point 1 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss10,`pmss10`>>
//| [[slots_table.pmss10]]<<pmss10,`pmss10`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P10 (<i>Pmss10</i>).  Mechanical power output for turbine flow point 10 for lookup table representing PU...+++
| _n/a_

| <<pmss2,`pmss2`>>
//| [[slots_table.pmss2]]<<pmss2,`pmss2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P2 (<i>Pmss2</i>).  Mechanical power output for turbine flow point 2 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss3,`pmss3`>>
//| [[slots_table.pmss3]]<<pmss3,`pmss3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P3 (<i>Pmss3</i>).  Mechanical power output for turbine flow point 3 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss4,`pmss4`>>
//| [[slots_table.pmss4]]<<pmss4,`pmss4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P4 (<i>Pmss4</i>).  Mechanical power output for turbine flow point 4 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss5,`pmss5`>>
//| [[slots_table.pmss5]]<<pmss5,`pmss5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P5 (<i>Pmss5</i>).  Mechanical power output for turbine flow point 5 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss6,`pmss6`>>
//| [[slots_table.pmss6]]<<pmss6,`pmss6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P6 (<i>Pmss6</i>).  Mechanical power output for turbine flow point 6 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss7,`pmss7`>>
//| [[slots_table.pmss7]]<<pmss7,`pmss7`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P7 (<i>Pmss7</i>).  Mechanical power output for turbine flow point 7 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss8,`pmss8`>>
//| [[slots_table.pmss8]]<<pmss8,`pmss8`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P8 (<i>Pmss8</i>).  Mechanical power output for turbine flow point 8 for lookup table representing PU mechanical...+++
| _n/a_

| <<pmss9,`pmss9`>>
//| [[slots_table.pmss9]]<<pmss9,`pmss9`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Pmss flow P9 (<i>Pmss9</i>).  Mechanical power output for turbine flow point 9 for lookup table representing PU mechanical...+++
| _n/a_

| <<rpg,`rpg`>>
//| [[slots_table.rpg]]<<rpg,`rpg`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Permanent droop for governor output feedback (<i>R-Perm-Gate</i>).+++
| _n/a_

| <<rpp,`rpp`>>
//| [[slots_table.rpp]]<<rpp,`rpp`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Permanent droop for electrical power feedback (<i>R-Perm-Pe</i>).+++
| _n/a_

| <<td,`td`>>
//| [[slots_table.td]]<<td,`td`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Derivative controller time constant (<i>Td</i>) (&gt;= 0).  Limits the derivative characteristic beyond a breakdown...+++
| _n/a_

| <<tdv,`tdv`>>
//| [[slots_table.tdv]]<<tdv,`tdv`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Distributive valve time lag time constant (<i>Tdv</i>) (&gt;= 0).+++
| _n/a_

| <<tg,`tg`>>
//| [[slots_table.tg]]<<tg,`tg`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Value to allow the distribution valve controller to advance beyond the gate movement rate limit (<i>Tg</i>) (&gt;= 0).+++
| _n/a_

| <<tp,`tp`>>
//| [[slots_table.tp]]<<tp,`tp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Pilot valve time lag time constant (<i>Tp</i>) (&gt;= 0).+++
| _n/a_

| <<tpe,`tpe`>>
//| [[slots_table.tpe]]<<tpe,`tpe`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Electrical power droop time constant (<i>Tpe</i>) (&gt;= 0).+++
| _n/a_

| <<tw,`tw`>>
//| [[slots_table.tw]]<<tw,`tw`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Water inertia time constant (<i>Tw</i>) (&gt; 0).+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#db]
=== `db`
+++Speed deadband (<i>db</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.db`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.db,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dicn]
=== `dicn`
+++Value to allow the integral controller to advance beyond the gate limits (<i>Dicn</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.dicn`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dicn,&#10548;>>
--
////


//[discrete]
[#dpv]
=== `dpv`
+++Value to allow the pilot valve controller to advance beyond the gate limits (<i>Dpv</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.dpv`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dpv,&#10548;>>
--
////


//[discrete]
[#dturb]
=== `dturb`
+++Turbine damping factor (<i>Dturb</i>).  Unit = delta P (PU of <i>MWbase</i>) / delta speed (PU).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.dturb`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.dturb,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#feedbackSignal]
=== `feedbackSignal`
+++Feedback signal selection (<i>Sw</i>).
true = PID output (if <i>R-Perm-Gate </i>= droop and <i>R-Perm-Pe </i>= 0)
false = electrical power (if <i>R-Perm-Gate </i>= 0 and <i>R-Perm-Pe </i>= droop) or
false = gate position (if R<i>-Perm-Gate </i>= droop and <i>R-Perm-Pe </i>= 0).
Typical value = false.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.feedbackSignal`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.feedbackSignal,&#10548;>>
--
////


//[discrete]
[#fl1]
=== `fl1`
+++Flowgate 1 (<i>Fl1</i>).  Flow value for gate position point 1 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fl1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fl1,&#10548;>>
--
////


//[discrete]
[#fl2]
=== `fl2`
+++Flowgate 2 (<i>Fl2</i>).  Flow value for gate position point 2 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fl2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fl2,&#10548;>>
--
////


//[discrete]
[#fl3]
=== `fl3`
+++Flowgate 3 (<i>Fl3</i>).  Flow value for gate position point 3 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fl3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fl3,&#10548;>>
--
////


//[discrete]
[#fl4]
=== `fl4`
+++Flowgate 4 (<i>Fl4</i>).  Flow value for gate position point 4 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fl4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fl4,&#10548;>>
--
////


//[discrete]
[#fl5]
=== `fl5`
+++Flowgate 5 (<i>Fl5</i>).  Flow value for gate position point 5 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fl5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fl5,&#10548;>>
--
////


//[discrete]
[#fp1]
=== `fp1`
+++Flow P1 (<i>Fp1</i>).  Turbine flow value for point 1 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp1,&#10548;>>
--
////


//[discrete]
[#fp10]
=== `fp10`
+++Flow P10 (<i>Fp10</i>).  Turbine flow value for point 10 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp10`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp10,&#10548;>>
--
////


//[discrete]
[#fp2]
=== `fp2`
+++Flow P2 (<i>Fp2</i>).  Turbine flow value for point 2 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp2,&#10548;>>
--
////


//[discrete]
[#fp3]
=== `fp3`
+++Flow P3 (<i>Fp3</i>).  Turbine flow value for point 3 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp3,&#10548;>>
--
////


//[discrete]
[#fp4]
=== `fp4`
+++Flow P4 (<i>Fp4</i>).  Turbine flow value for point 4 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp4,&#10548;>>
--
////


//[discrete]
[#fp5]
=== `fp5`
+++Flow P5 (<i>Fp5</i>).  Turbine flow value for point 5 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp5,&#10548;>>
--
////


//[discrete]
[#fp6]
=== `fp6`
+++Flow P6 (<i>Fp6</i>).  Turbine flow value for point 6 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp6,&#10548;>>
--
////


//[discrete]
[#fp7]
=== `fp7`
+++Flow P7 (<i>Fp7</i>).  Turbine flow value for point 7 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp7,&#10548;>>
--
////


//[discrete]
[#fp8]
=== `fp8`
+++Flow P8 (<i>Fp8</i>).  Turbine flow value for point 8 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp8,&#10548;>>
--
////


//[discrete]
[#fp9]
=== `fp9`
+++Flow P9 (<i>Fp9</i>).  Turbine flow value for point 9 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.fp9`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fp9,&#10548;>>
--
////


//[discrete]
[#gmax]
=== `gmax`
+++Maximum gate position (<i>Gmax</i>) (&gt; GovHydroWEH.gmin).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gmax,&#10548;>>
--
////


//[discrete]
[#gmin]
=== `gmin`
+++Minimum gate position (<i>Gmin</i>) (&lt; GovHydroWEH.gmax).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gmin,&#10548;>>
--
////


//[discrete]
[#gtmxcl]
=== `gtmxcl`
+++Maximum gate closing rate (<i>Gtmxcl</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gtmxcl`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gtmxcl,&#10548;>>
--
////


//[discrete]
[#gtmxop]
=== `gtmxop`
+++Maximum gate opening rate (<i>Gtmxop</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gtmxop`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gtmxop,&#10548;>>
--
////


//[discrete]
[#gv1]
=== `gv1`
+++Gate 1 (<i>Gv1</i>).  Gate Position value for point 1 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv1,&#10548;>>
--
////


//[discrete]
[#gv2]
=== `gv2`
+++Gate 2 (<i>Gv2</i>).  Gate Position value for point 2 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv2,&#10548;>>
--
////


//[discrete]
[#gv3]
=== `gv3`
+++Gate 3 (<i>Gv3</i>).  Gate Position value for point 3 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv3,&#10548;>>
--
////


//[discrete]
[#gv4]
=== `gv4`
+++Gate 4 (<i>Gv4</i>).  Gate Position value for point 4 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv4,&#10548;>>
--
////


//[discrete]
[#gv5]
=== `gv5`
+++Gate 5 (<i>Gv5</i>).  Gate Position value for point 5 for lookup table representing water flow through the turbine as a function of gate position to produce steady state flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv5,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kd]
=== `kd`
+++Derivative controller derivative gain (<i>Kd</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.kd`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kd,&#10548;>>
--
////


//[discrete]
[#ki]
=== `ki`
+++Derivative controller Integral gain (<i>Ki</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.ki`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ki,&#10548;>>
--
////


//[discrete]
[#kp]
=== `kp`
+++Derivative control gain (<i>Kp</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.kp`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kp,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pmss1]
=== `pmss1`
+++Pmss flow P1 (<i>Pmss1</i>).  Mechanical power output for turbine flow point 1 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss1,&#10548;>>
--
////


//[discrete]
[#pmss10]
=== `pmss10`
+++Pmss flow P10 (<i>Pmss10</i>).  Mechanical power output for turbine flow point 10 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss10`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss10,&#10548;>>
--
////


//[discrete]
[#pmss2]
=== `pmss2`
+++Pmss flow P2 (<i>Pmss2</i>).  Mechanical power output for turbine flow point 2 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss2,&#10548;>>
--
////


//[discrete]
[#pmss3]
=== `pmss3`
+++Pmss flow P3 (<i>Pmss3</i>).  Mechanical power output for turbine flow point 3 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss3,&#10548;>>
--
////


//[discrete]
[#pmss4]
=== `pmss4`
+++Pmss flow P4 (<i>Pmss4</i>).  Mechanical power output for turbine flow point 4 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss4,&#10548;>>
--
////


//[discrete]
[#pmss5]
=== `pmss5`
+++Pmss flow P5 (<i>Pmss5</i>).  Mechanical power output for turbine flow point 5 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss5,&#10548;>>
--
////


//[discrete]
[#pmss6]
=== `pmss6`
+++Pmss flow P6 (<i>Pmss6</i>).  Mechanical power output for turbine flow point 6 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss6,&#10548;>>
--
////


//[discrete]
[#pmss7]
=== `pmss7`
+++Pmss flow P7 (<i>Pmss7</i>).  Mechanical power output for turbine flow point 7 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss7`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss7,&#10548;>>
--
////


//[discrete]
[#pmss8]
=== `pmss8`
+++Pmss flow P8 (<i>Pmss8</i>).  Mechanical power output for turbine flow point 8 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss8`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss8,&#10548;>>
--
////


//[discrete]
[#pmss9]
=== `pmss9`
+++Pmss flow P9 (<i>Pmss9</i>).  Mechanical power output for turbine flow point 9 for lookup table representing PU mechanical power on machine MVA rating as a function of turbine flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.pmss9`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pmss9,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rpg]
=== `rpg`
+++Permanent droop for governor output feedback (<i>R-Perm-Gate</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.rpg`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.rpg,&#10548;>>
--
////


//[discrete]
[#rpp]
=== `rpp`
+++Permanent droop for electrical power feedback (<i>R-Perm-Pe</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.rpp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.rpp,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#td]
=== `td`
+++Derivative controller time constant (<i>Td</i>) (&gt;= 0).  Limits the derivative characteristic beyond a breakdown frequency to avoid amplification of high-frequency noise.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.td`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.td,&#10548;>>
--
////


//[discrete]
[#tdv]
=== `tdv`
+++Distributive valve time lag time constant (<i>Tdv</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.tdv`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tdv,&#10548;>>
--
////


//[discrete]
[#tg]
=== `tg`
+++Value to allow the distribution valve controller to advance beyond the gate movement rate limit (<i>Tg</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.tg`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tg,&#10548;>>
--
////


//[discrete]
[#tp]
=== `tp`
+++Pilot valve time lag time constant (<i>Tp</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tp,&#10548;>>
--
////


//[discrete]
[#tpe]
=== `tpe`
+++Electrical power droop time constant (<i>Tpe</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.tpe`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tpe,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#tw]
=== `tw`
+++Water inertia time constant (<i>Tw</i>) (&gt; 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovHydroWEH.tw`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tw,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
